--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.14",
+    "@mui/material": "^5.15.14",
     "clsx": "^2.1.0",
     "marked": "^12.0.1",
     "next": "14.1.4",
